--- a/git_beamer.tex
+++ b/git_beamer.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,ignorenonframetext,]{beamer}
 \usetheme{Boadilla}
+\setbeamertemplate{navigation symbols}{} 
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
 \ifxetex
@@ -693,7 +694,7 @@ history.
 
 \section{Exercises}
 
-\begin{frame}[fragile]\frametitle{Exercise: Set up git environment}
+\begin{frame}[fragile]\frametitle{Exercise 1: Set up git environment}
 
 \begin{enumerate}[1.]
 \item
@@ -708,14 +709,14 @@ history.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[fragile]\frametitle{Exercise: git basics}
+\begin{frame}[fragile]\frametitle{Exercise 2: git basics}
 
 Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 \texttt{diff}, \texttt{tag}.
 
 \end{frame}
 
-\begin{frame}\frametitle{Exercise: Branch-based development}
+\begin{frame}\frametitle{Exercise 3: Branch-based development}
 
 \begin{enumerate}[1.]
 \item
@@ -729,7 +730,7 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[fragile]\frametitle{Exercise: Be social on github}
+\begin{frame}[fragile]\frametitle{Exercise 4: Be social on github}
 
 \begin{enumerate}[1.]
 \item
@@ -748,7 +749,7 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[fragile]\frametitle{Exercise: Manage remotes}
+\begin{frame}[fragile]\frametitle{Exercise 5: Manage remotes}
 
 \begin{enumerate}[1.]
 \item
@@ -770,7 +771,7 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[fragile]\frametitle{Exercise: Remote branch}
+\begin{frame}[fragile]\frametitle{Exercise 6: Remote branch}
 
 \begin{enumerate}[1.]
 \item
@@ -785,7 +786,7 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[fragile]\frametitle{Exercise: Handle conflicts}
+\begin{frame}[fragile]\frametitle{Exercise 7: Handle conflicts}
 
 \begin{enumerate}[1.]
 \item
@@ -805,7 +806,7 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[fragile]\frametitle{Exercise: Time Machine}
+\begin{frame}[fragile]\frametitle{Exercise 8: Time Machine}
 
 Use \texttt{stash}, \texttt{checkout} to do time travel.
 
@@ -830,5 +831,26 @@ Use \texttt{stash}, \texttt{checkout} to do time travel.
   Version Control With Git, 2nd Edition}
 \end{itemize}
 \end{frame}
+
+\begin{frame}\frametitle{Acknowledgment}
+
+\begin{itemize}
+\item
+  The slides is composed with
+  \href{http://daringfireball.net/projects/markdown/}{Markdown}
+  language, and converted to
+  \href{https://bitbucket.org/rivanvx/beamer/wiki/Home}{latex beamer}
+  with \href{http://johnmacfarlane.net/pandoc/}{pandoc}.\\
+\item
+  \href{http://www.tug.org/xetex/}{XeTeX} is a nice typesetting system.
+  \href{http://www.phys.psu.edu/~collins/software/latexmk-jcc/}{latexmk}
+  helps to hide the complexity of compilation.
+\item
+  The slides, along with the
+  \href{https://github.com/weijianwen/GitForBeginners}{project}, is
+  hosted on \href{https://github.com/}{github}.
+\end{itemize}
+\end{frame}
+
 
 \end{document}
