Add feedback way.

--- a/git_beamer.tex
+++ b/git_beamer.tex
@@ -849,6 +849,12 @@ Use \texttt{stash}, \texttt{checkout} to do time travel.
   The slides, along with the
   \href{https://github.com/weijianwen/GitForBeginners}{project}, is
   hosted on \href{https://github.com/}{github}.
+\item
+  Feedback is always welcomed. Write
+  \href{mailto:weijianwen@sjtu.edu.cn}{me} an email or open an issue on the
+  \href{https://github.com/weijianwen/GitForBeginners}{project}
+  homepage.
+
 \end{itemize}
 \end{frame}
 
