--- a/gittutorial.mkd
+++ b/gittutorial.mkd
@@ -330,3 +330,4 @@ Use ```stash```, ```checkout``` to do time travle.
  + The slides is composed with [Markdown](http://daringfireball.net/projects/markdown/) language, and converted to [latex beamer](https://bitbucket.org/rivanvx/beamer/wiki/Home) with [pandoc](http://johnmacfarlane.net/pandoc/).  
  + [XeTeX](http://www.tug.org/xetex/) is a nice typesetting system. [latexmk](http://www.phys.psu.edu/~collins/software/latexmk-jcc/) helps to hide the complexity of compilation.
  + The slides, along with the [project](https://github.com/weijianwen/GitForBeginners), is hosted on [github](https://github.com/). 
+ + Feedback is always welcomed. Write [me](mailto:weijianwen@sjtu.edu.cn) or open an issue on the [project](https://github.com/weijianwen/GitForBeginners) homepage.
