--- a/git_beamer.tex
+++ b/git_beamer.tex
@@ -744,7 +744,7 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
   \href{https://github.com/weijianwen/GitForBeginners}{GitForBeginners}
   project with Read+Write access.
 \item
-  Write something into the \texttt{README.txt} (DON'T destroy the
+  Write something into the \texttt{README.mkd} (DON'T destroy the
   description header). add, commit, pull, push.
 \end{enumerate}
 \end{frame}
@@ -777,7 +777,7 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 \item
   Create a local branch with your full name, such as \texttt{zhangsan}.
 \item
-  Write something into README.txt on the branch. add, commit, pull, push
+  Write something into README.mkd on the branch. add, commit, pull, push
   to the remote branch.
 \item
   Leave the branch on github as a mark of ``I finish the homework''.
@@ -795,12 +795,12 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
   twice into two separate projects, namely \texttt{proj\_A} and
   \texttt{proj\_B}.
 \item
-  In proj\_A, modify README.txt. add, commit, pull, push
+  In proj\_A, modify README.mkd. add, commit, pull, push
 \item
-  In proj\_B, modify the \emph{SAME} lines of README.txt as you do in
+  In proj\_B, modify the \emph{SAME} lines of README.mkd as you do in
   proj\_A. add, commit, pull
 \item
-  A \emph{conflict} towards README.txt arises in proj\_B.
+  A \emph{conflict} towards README.mkd arises in proj\_B.
 \item
   Resolve the conflict, then add, commit, pull, push to github.
 \end{enumerate}
