add something to README.mkd

--- a/README.mkd
+++ b/README.mkd
@@ -33,3 +33,4 @@ Feedback is always welcomed. You can open an issue on github (*recommended*) or 
 Write something, please.
 
 + Have a nice day. April 5th, Jianwen
++ Hello World. April 8th, bowen  
