--- a/README.mkd
+++ b/README.mkd
@@ -35,3 +35,4 @@ Write something, please.
 + Have a nice day. April 5th, Jianwen
 + Hello World. April 8th, bowen  
 + Hello World too. April 8th, LeeAbner
++ GOT IT! April 8th, Otto Mao
