--- a/README.mkd
+++ b/README.mkd
@@ -36,3 +36,5 @@ Write something, please.
 + Hello World. April 8th, bowen  
 + Hello World too. April 8th, LeeAbner
 + GOT IT! April 8th, Otto Mao
+It's rainy,today.April 9th.Rong Renyuan	
+
